--- a/src/app/components/budget-header/budget-header.html
+++ b/src/app/components/budget-header/budget-header.html
@@ -1,5 +1,8 @@
 <div>
-  <h1><span (click)="previous.emit()">&lt;&lt;</span> {{activeDate.month}} {{activeDate.year}} <span (click)="next.emit()">&gt;&gt;</span></h1>
+  <h1>
+    <span (click)="previous.emit()">&lt;&lt;</span> 
+    {{activeDate.month}} {{activeDate.year}} 
+    <span (click)="next.emit()">&gt;&gt;</span></h1>
   <div [class.red]="remainingYearlyBudget < 0">
     Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingYearlyBudget | currency:'USD':true:'1.2-2'}} unspent
     + {{spentThisYear | currency:'USD':true:'1.2-2'}} spent
