--- a/src/app/containers/budgeting-page/budgeting-page.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page.component.html
@@ -1,5 +1,5 @@
   <div>
-    <h1>Hello Budget World</h1>
+    <h1>Budget</h1>
     <yb-budget-header 
       *ngIf="totalBudgetInfo != null"
       [budgetAmount]="totalBudgetInfo.totalBudget" 
