Instead of forces budgets to be used as yearly tool you can use budgets given any time span.  The selectors and UI  have been updated to reflect this.

--- a/src/app/components/budget-header/budget-header.html
+++ b/src/app/components/budget-header/budget-header.html
@@ -3,9 +3,9 @@
     <span (click)="previous.emit()">&lt;&lt;</span> 
     {{activeDate.month}} {{activeDate.year}} 
     <span (click)="next.emit()">&gt;&gt;</span></h1>
-  <div [class.red]="remainingYearlyBudget < 0">
-    Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingYearlyBudget | currency:'USD':true:'1.2-2'}} unspent
-    + {{spentThisYear | currency:'USD':true:'1.2-2'}} spent
+  <div [class.red]="remainingTotalBudget < 0">
+    Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingTotalBudget | currency:'USD':true:'1.2-2'}} unspent
+    + {{spentInTotal | currency:'USD':true:'1.2-2'}} spent
   </div>
   <div [class.red]="remainingMonthlyBudget < 0">
     Monthly budget: {{budgetAmount / 12 | currency:'USD':true:'1.2-2'}} = {{remainingMonthlyBudget | currency:'USD':true:'1.2-2'}}
