--- a/src/app/containers/budgeting-page/budgeting-page.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page.component.html
@@ -4,11 +4,11 @@
       *ngIf="totalBudgetInfo != null"
       [budgetAmount]="totalBudgetInfo.totalBudget" 
       [activeDate]="selectedMonthAndYear$"
-      [remainingYearlyBudget]="totalBudgetInfo.unspent"
+      [remainingTotalBudget]="totalBudgetInfo.unspent"
       [remainingMonthlyBudget]="monthlyBudgetInfo.unspent"
-      [spentThisYear]="totalBudgetInfo.spent"
+      [spentInTotal]="totalBudgetInfo.spent"
       [spentThisMonth]="monthlyBudgetInfo.spent"
-      [getRunningSurplus]="getRunningSurplus$"
+      [getRunningSurplus]="getRunningSurplus$ | async"
       (previous)="previousMonth($event)"
       (next)="nextMonth($event)"></yb-budget-header>
     <yb-category *ngFor="let cat of categories$ | async" 
