started adding some material UI

--- a/src/app/components/new-category/new-category.html
+++ b/src/app/components/new-category/new-category.html
@@ -1,4 +1,4 @@
 <div>
   New Category Name: <input type="text" #newCategoryName>
-  <button (click)="addCategory(newCategoryName.value)">Add</button>
+  <md-icon (click)="addCategory(newCategoryName.value)">add_box</md-icon>
 </div>
