--- a/src/app/components/budget-header/budget-header.html
+++ b/src/app/components/budget-header/budget-header.html
@@ -1,17 +1,15 @@
-<div>
-  <h1>
+<md-list>
+    <!--<h1>
     <span (click)="previous.emit()">&lt;&lt;</span> 
     {{activeDate.month}} {{activeDate.year}} 
-    <span (click)="next.emit()">&gt;&gt;</span></h1>
-  <div [class.red]="remainingTotalBudget < 0">
-    Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingTotalBudget | currency:'USD':true:'1.2-2'}} unspent
-    + {{spentInTotal | currency:'USD':true:'1.2-2'}} spent
-  </div>
-  <div [class.red]="remainingMonthlyBudget < 0">
-    Monthly budget: {{budgetAmount / 12 | currency:'USD':true:'1.2-2'}} = {{remainingMonthlyBudget | currency:'USD':true:'1.2-2'}}
-    unspent + {{spentThisMonth | currency:'USD':true:'1.2-2'}} spent
-  </div>
-  <div>
-    Running surplus: {{getRunningSurplus | currency:'USD':true:'1.2-2'}}
-  </div>
-</div>
+    <span (click)="next.emit()">&gt;&gt;</span></h1>-->
+
+ <md-list-item [class.red]="remainingTotalBudget < 0">Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingTotalBudget | currency:'USD':true:'1.2-2'}} unspent
+    + {{spentInTotal | currency:'USD':true:'1.2-2'}} spent</md-list-item>
+ <md-list-item [class.red]="remainingMonthlyBudget < 0"> Monthly budget: {{budgetAmount / 12 | currency:'USD':true:'1.2-2'}} = {{remainingMonthlyBudget | currency:'USD':true:'1.2-2'}}
+    unspent + {{spentThisMonth | currency:'USD':true:'1.2-2'}} spent </md-list-item>
+ <md-list-item> Running surplus: {{getRunningSurplus | currency:'USD':true:'1.2-2'}} </md-list-item>
+</md-list>
+
+
+ 
