--- a/src/app/containers/budgeting-page/budgeting-page.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page.component.html
@@ -1,22 +1,21 @@
-  <div>
-    <h1>Budget</h1>
-    <yb-budget-header 
-      *ngIf="totalBudgetInfo != null"
-      [budgetAmount]="totalBudgetInfo.totalBudget" 
-      [activeDate]="selectedMonthAndYear$"
-      [remainingTotalBudget]="totalBudgetInfo.unspent"
-      [remainingMonthlyBudget]="monthlyBudgetInfo.unspent"
-      [spentInTotal]="totalBudgetInfo.spent"
-      [spentThisMonth]="monthlyBudgetInfo.spent"
-      [getRunningSurplus]="getRunningSurplus$ | async"
-      (previous)="previousMonth($event)"
-      (next)="nextMonth($event)"></yb-budget-header>
-    <yb-category *ngFor="let cat of categories$ | async" 
-      [categoryName]="cat.name"
-      [categoryId]="cat.id"
-      [total]="cat.amount"
+<md-sidenav-container class="example-sidenav-fab-container">
+  <md-sidenav #sidenav mode="push" opened="true">
+    <div class="example-scrolling-content">
+      list of budgets:
+    </div>
+  </md-sidenav>
+  <md-toolbar color="primary">
+    <span><md-icon (click)="sidenav.toggle()">menu</md-icon><span class="example-spacer"></span><md-icon>chevron_left</md-icon><md-icon>chevron_left</md-icon> May 2017 Budget<md-icon>chevron_right</md-icon><md-icon>chevron_right</md-icon></span>
+  </md-toolbar>
+  <md-toolbar color="accent">
+      <yb-budget-header *ngIf="totalBudgetInfo != null" [budgetAmount]="totalBudgetInfo.totalBudget" [activeDate]="selectedMonthAndYear$"
+        [remainingTotalBudget]="totalBudgetInfo.unspent" [remainingMonthlyBudget]="monthlyBudgetInfo.unspent" [spentInTotal]="totalBudgetInfo.spent"
+        [spentThisMonth]="monthlyBudgetInfo.spent" [getRunningSurplus]="getRunningSurplus$ | async" (previous)="previousMonth($event)"
+        (next)="nextMonth($event)"></yb-budget-header>
+  </md-toolbar>
+
+    <yb-category *ngFor="let cat of categories$ | async" [categoryName]="cat.name" [categoryId]="cat.id" [total]="cat.amount"
       (add)="addTransaction($event)"></yb-category>
-    <yb-new-category (add)="addCategory($event)"></yb-new-category>
-  </div>
 
-
+  <yb-new-category (add)="addCategory($event)"></yb-new-category>
+</md-sidenav-container>
