--- a/src/app/components/budget-header/budget-header.html
+++ b/src/app/components/budget-header/budget-header.html
@@ -4,11 +4,19 @@
     {{activeDate.month}} {{activeDate.year}} 
     <span (click)="next.emit()">&gt;&gt;</span></h1>-->
 
- <md-list-item [class.red]="remainingTotalBudget < 0">Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingTotalBudget | currency:'USD':true:'1.2-2'}} unspent
-    + {{spentInTotal | currency:'USD':true:'1.2-2'}} spent</md-list-item>
- <md-list-item [class.red]="remainingMonthlyBudget < 0"> Monthly budget: {{budgetAmount / 12 | currency:'USD':true:'1.2-2'}} = {{remainingMonthlyBudget | currency:'USD':true:'1.2-2'}}
-    unspent + {{spentThisMonth | currency:'USD':true:'1.2-2'}} spent </md-list-item>
- <md-list-item> Running surplus: {{getRunningSurplus | currency:'USD':true:'1.2-2'}} </md-list-item>
+ <span [class.red]="remainingTotalBudget < 0">Total budget: {{budgetAmount | currency:'USD':true:'1.2-2'}} = {{remainingTotalBudget | currency:'USD':true:'1.2-2'}} unspent
+    + {{spentInTotal | currency:'USD':true:'1.2-2'}} spent</span>
+  <md-progress-bar
+      class="example-margin"
+      color="accent"
+      mode="determinate"
+      value="90"
+      bufferValue="75">
+  </md-progress-bar>
+    
+ <span [class.red]="remainingMonthlyBudget < 0"> Monthly budget: {{budgetAmount / 12 | currency:'USD':true:'1.2-2'}} = {{remainingMonthlyBudget | currency:'USD':true:'1.2-2'}}
+    unspent + {{spentThisMonth | currency:'USD':true:'1.2-2'}} spent </span>
+ <span> Running surplus: {{getRunningSurplus | currency:'USD':true:'1.2-2'}} </span>
 </md-list>
 
 
