--- a/src/app/containers/budgeting-page/budgeting-page.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page.component.html
@@ -1,22 +1,27 @@
+
+<div (window:resize)="onResize($event)">
 <md-sidenav-container class="example-sidenav-fab-container">
-  <md-sidenav #leftnav mode="side" opened="true" align="start">
+  <md-sidenav id="left-nav" #leftnav [mode]="leftNavDisplayMode" [opened]="leftNavOpened" align="start">
     <yb-budgeting-page-left-nav></yb-budgeting-page-left-nav>
   </md-sidenav>
 
 
-  <md-toolbar color="primary">
-    <span><md-icon (click)="leftnav.toggle()">menu</md-icon><span class="example-spacer"></span>
-    <md-icon>chevron_left</md-icon>
-    <md-icon>chevron_left</md-icon> May 2017 Budget
-    <md-icon>chevron_right</md-icon>
-    <md-icon>chevron_right</md-icon>
-    <md-icon (click)="rightnav.toggle()">insert_chart</md-icon>
-    </span>
-  </md-toolbar>
-  <yb-budgeting-page-main></yb-budgeting-page-main>
+  <div id="main">
+    <md-toolbar color="primary">
+      <md-icon id="left-nav-toggle" (click)="leftnav.toggle()">menu</md-icon>
+      <span class="example-spacer"></span>
+      <md-icon>chevron_left</md-icon>
+      <md-icon>chevron_left</md-icon> May 2017 Budget
+      <md-icon>chevron_right</md-icon>
+      <md-icon>chevron_right</md-icon>
+      <md-icon id="right-nav-toggle" (click)="rightnav.toggle()">insert_chart</md-icon>
+    </md-toolbar>
+    <yb-budgeting-page-main></yb-budgeting-page-main>
+  </div>
 
-  <md-sidenav #rightnav mode="side" opened="true" align="end">
+  <md-sidenav id="right-nav" #rightnav [mode]="rightNavDisplayMode" [opened]="rightNavOpened" align="end">
     <yb-budgeting-page-right-nav></yb-budgeting-page-right-nav>
   </md-sidenav>
 
 </md-sidenav-container>
+</div>
