--- a/src/app/containers/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
@@ -1,3 +1,3 @@
-<div class="example-scrolling-content">
-  list of budgets:
-</div>
+<yb-pie width="240" height="240" ringWidth="50"></yb-pie>
+
+<yb-pie width="240" height="240" ringWidth="50"></yb-pie>
