--- a/src/app/containers/budgeting-page/budgeting-page.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page.component.html
@@ -10,7 +10,7 @@
       <md-icon id="left-nav-toggle" (click)="leftnav.toggle()">menu</md-icon>
       <span class="example-spacer"></span>
       <md-icon (click)="previousMonth()">chevron_left</md-icon> 
-      {{selectedMonthAndYear$.fullMonth}} {{selectedMonthAndYear$.year}} Budget
+      {{selectedMonthAndYear$.fullMonth}} {{selectedMonthAndYear$.year}} {{selectedBudgetName | async}}
       <md-icon (click)="nextMonth()">chevron_right</md-icon>
       <md-icon id="right-nav-toggle" (click)="rightnav.toggle()">insert_chart</md-icon>
     </md-toolbar>
