--- a/src/app/containers/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
@@ -1,7 +1,6 @@
 <yb-budget-header *ngIf="totalBudgetInfo != null" [budgetAmount]="totalBudgetInfo.totalBudget" [activeDate]="selectedMonthAndYear$"
   [remainingTotalBudget]="totalBudgetInfo.unspent" [remainingMonthlyBudget]="monthlyBudgetInfo.unspent" [spentInTotal]="totalBudgetInfo.spent"
-  [spentThisMonth]="monthlyBudgetInfo.spent" [getRunningSurplus]="getRunningSurplus$ | async" (previous)="previousMonth($event)"
-  (next)="nextMonth($event)"></yb-budget-header>
+  [spentThisMonth]="monthlyBudgetInfo.spent" [getRunningSurplus]="getRunningSurplus$ | async"></yb-budget-header>
 
 <yb-category *ngFor="let cat of categories$ | async" [categoryName]="cat.name" [categoryId]="cat.id" [total]="cat.amount"
   (add)="addTransaction($event)"></yb-category>
