hook up edit category to go to the edit category page

--- a/src/app/containers/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
@@ -3,5 +3,5 @@
   [spentThisMonth]="monthlyBudgetInfo.spent" [getRunningSurplus]="getRunningSurplus$ | async"></yb-budget-header>
 
 <yb-category *ngFor="let cat of categories$ | async" [categoryName]="cat.name" [categoryId]="cat.id" [total]="cat.amount"
-  (add)="addTransaction($event)"></yb-category>
+  (add)="addTransaction($event)" (edit)="editCategory($event)"></yb-category>
 
