do some setup for category page

--- a/src/app/components/category-transactions/category-transactions.html
+++ b/src/app/components/category-transactions/category-transactions.html
@@ -2,5 +2,5 @@
   <span>{{trans.timestamp}}</span>
   <span>{{trans.name}}</span>
   <span>{{trans.amount}}</span>
-  <button (click)="delete(trans._id)">X</button>
+  <button (click)="remove.emit(trans.id)">X</button>
 </div>
