--- a/src/app/containers/edit-category-page/edit-category-page.component.html
+++ b/src/app/containers/edit-category-page/edit-category-page.component.html
@@ -1,3 +1,5 @@
 <p>
   edit-category-page works!
+
+  <yb-category-transactions [transactions]="transactions" (remove)="removeTransaction($event)"></yb-category-transactions>
 </p>
