output transactions on edit category page

--- a/src/app/containers/budgeting-page/budgeting-page-left-nav/budgeting-page-left-nav.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-left-nav/budgeting-page-left-nav.component.html
@@ -10,5 +10,10 @@
 <div>
 <button routerLink="/create-budget">Create Budget</button>
 </div>
+<div>
+<button routerLink="/budget-list">Manage Budgets</button>
+</div>
+
+
 
 <yb-new-category (add)="addCategory($event)"></yb-new-category>
