--- a/src/app/containers/edit-category-page/edit-category-page.component.html
+++ b/src/app/containers/edit-category-page/edit-category-page.component.html
@@ -1,5 +1,11 @@
-<p>
-  edit-category-page works!
+<div>
+  <h1>edit-category-page works!</h1>
 
-  <yb-category-transactions [transactions]="transactions" (remove)="removeTransaction($event)"></yb-category-transactions>
-</p>
+  <div *ngFor="let trans of transactions | async">
+    <span>{{trans.timestamp}}</span>
+    <span>{{trans.name}}</span>
+    <span>{{trans.amount}}</span>
+    <button (click)="removeTransaction(trans.id)">X</button>
+  </div>
+  
+</div>
