fixed bug with the delete category button

--- a/src/app/containers/edit-category-page/edit-category-page.component.html
+++ b/src/app/containers/edit-category-page/edit-category-page.component.html
@@ -1,4 +1,5 @@
 <div>
+  <button (click)="back()">Back</button>
   <h1>edit-category-page works!</h1>
   <button (click)="removeCategory()">Delete this category</button>
 
