--- a/src/app/containers/create-budget-page/create-budget-page.component.html
+++ b/src/app/containers/create-budget-page/create-budget-page.component.html
@@ -19,4 +19,4 @@
   Time Span End: <input type="text">
 </div>
 
-<button (click)="create()">Create</button>
+<button id="create-budget" (click)="create()">Create</button>
