implemented the ability to view/delete transactions on the budgeting page itself

--- a/src/app/components/category/category.css
+++ b/src/app/components/category/category.css
@@ -21,6 +21,22 @@ input {
   width: 100px;
 }
 
+table {
+    margin-top: 10px;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
 @media only screen and (min-width: 900px) {
   .category-line {
     display: flex;
