--- a/src/app/containers/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
@@ -7,6 +7,7 @@
   [categoryId]="cat.id" 
   [total]="cat.amount"
   [transactions]="cat.transactions" 
+  [selected]="cat.selected"
   (add)="addTransaction($event)" 
   (removeTransaction)="removeTransaction($event)"
   (removeCategory)="removeCategory($event)"  
