--- a/src/app/containers/budgeting-page/budgeting-page.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page.component.html
@@ -9,9 +9,9 @@
     <md-toolbar color="primary">
       <md-icon id="left-nav-toggle" (click)="leftnav.toggle()">menu</md-icon>
       <span class="example-spacer"></span>
-      <md-icon (click)="previousMonth()">chevron_left</md-icon> 
-      {{selectedMonthAndYear$.fullMonth}} {{selectedMonthAndYear$.year}} {{selectedBudgetName | async}}
-      <md-icon (click)="nextMonth()">chevron_right</md-icon>
+      <md-icon (click)="previousMonth()" class="previous-month-button">chevron_left</md-icon> 
+      <h1>{{selectedMonthAndYear$.fullMonth}} {{selectedMonthAndYear$.year}} {{selectedBudgetName | async}}</h1>
+      <md-icon (click)="nextMonth()"  class="next-month-button">chevron_right</md-icon>
       <md-icon id="right-nav-toggle" (click)="rightnav.toggle()">insert_chart</md-icon>
     </md-toolbar>
     <yb-budgeting-page-main></yb-budgeting-page-main>
