--- a/src/app/components/category/category.html
+++ b/src/app/components/category/category.html
@@ -32,7 +32,7 @@
   <tr *ngFor="let transaction of transactions">
     <td ngClass="existing-transaction-amount-for-{{categoryName}}">{{transaction.amount | currency:'USD':true:'1.2-2'}}</td>
     <td ngClass="existing-transaction-name-for-{{categoryName}}">{{transaction.name}}</td>
-    <td class="delete-transaction-button"><md-icon (click)="removeTransaction.emit(transaction)">delete_forever</md-icon></td>
+    <td class="delete-transaction-button"><md-icon class="" (click)="removeTransaction.emit(transaction)">delete_forever</md-icon></td>
   </tr>
 </table>
 
