--- a/src/app/containers/create-budget-page/create-budget-page.component.html
+++ b/src/app/containers/create-budget-page/create-budget-page.component.html
@@ -3,20 +3,43 @@
 </h1>
 
 <div>
-  Name: <input type="text">
+  <md-input-container>
+    <input #budgetName mdInput placeholder="Budget Name" class="budget-name">
+    <md-hint *ngIf="missingBudgetName" align="start">This field is required</md-hint>
+  </md-input-container>
 </div>
 <div>
-  Details: <input type="text" size="64" maxlength="64">
+  <md-input-container>
+    <input #details mdInput placeholder="Details" class="details" size="64" maxlength="64">
+  </md-input-container>
 </div>
 <div>
-  Budget Amount: <input type="text">
-</div>
-<div>
-  Time Span Start: <input type="text">
-  <p> (We should use angular material calendar) </p>
-</div>
-<div>
-  Time Span End: <input type="text">
+  <md-input-container>
+    <input #budgetAmount mdInput placeholder="Budget Amount (ex: 200)" class="budget-amount" type="number" min="1">
+    <md-hint *ngIf="missingBudgetAmount" align="start">This field is required</md-hint>
+  </md-input-container>
 </div>
 
-<button id="create-budget" (click)="create()">Create</button>
+<div>
+  Budget Start:
+  <md-input-container>
+    <input #budgetStartDate mdInput placeholder="Month, Year" type="month" name="bdaymonth">
+    <md-hint *ngIf="missingBudgetStart" align="start">This field is required</md-hint>
+  </md-input-container>
+</div>
+<div>
+  Budget Finish:
+  <md-input-container>
+    <input #budgetEndDate mdInput placeholder="Month, Year" type="month" name="bdaymonth">
+    <md-hint *ngIf="missingBudgetFinish" align="start">This field is required</md-hint>
+    <md-hint *ngIf="budgetFinishIsBeforeBudgetStart" align="start">Must be after budget start</md-hint>
+  </md-input-container>
+</div>
+
+<div>
+  Create Budget
+  <md-icon id="create-budget" 
+  (click)="create(budgetName.value, details.value, budgetAmount.value, budgetStartDate.value, budgetEndDate.value)">
+    add_box
+  </md-icon>
+</div>
