wrote delete budget test

--- a/src/app/containers/budgeting-page/budgeting-page-left-nav/budgeting-page-left-nav.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-left-nav/budgeting-page-left-nav.component.html
@@ -11,7 +11,7 @@
 <button routerLink="/create-budget">Create Budget</button>
 </div>
 <div>
-<button routerLink="/budget-list">Manage Budgets</button>
+<button id="manage-budgets" routerLink="/budget-list">Manage Budgets</button>
 </div>
 
 
