Labeled my pie charts

--- a/src/app/containers/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
+++ b/src/app/containers/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
@@ -1,3 +1,3 @@
-<yb-pie [update]="renderPie" width="240" height="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
+<yb-pie [update]="renderPie" title="Yearly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
 
-<yb-pie [update]="renderPie2" width="240" height="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
+<yb-pie [update]="renderPie2" title="Monthly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
