render money and bars

--- a/src/app/pages/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
@@ -1,7 +1,9 @@
-<yb-pie [update]="renderPie" title="Yearly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
-<yb-pie [update]="renderPie2" title="Monthly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
+<!--<yb-pie [update]="renderPie" title="Yearly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
+<yb-pie [update]="renderPie2" title="Monthly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>-->
 
-<svg width="600" height="350">
+<yb-bar-graph [update]="renderPie" [width]="280" [height]="350" title="Yearly"></yb-bar-graph>
+
+<svg width="280" height="350">
   <g transform="translate(40,20)">
     <g class="x axis" transform="translate(0,210)">
       <g class="tick" transform="translate(33,0)" style="opacity: 1;">
