render more of the bar graph

--- a/src/app/pages/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
@@ -5,7 +5,7 @@
 
 <svg width="280" height="350">
   <g transform="translate(40,20)">
-    <g class="x axis" transform="translate(0,210)">
+    <g class="x-axis" transform="translate(0,210)">
       <g class="tick" transform="translate(33,0)" style="opacity: 1;">
         <line y2="6" x2="0"></line>
         <text dy="-.55em" y="9" x="0" dx="-.8em" transform="rotate(-90)" style="text-anchor: end;">Remaining</text>
