work on e2e tests

--- a/src/app/components/new-category/new-category.html
+++ b/src/app/components/new-category/new-category.html
@@ -1,6 +1,6 @@
 <div>
   <md-input-container>
-    <input mdInput [(ngModel)]="name" placeholder="New Category Name" (keypress)="onKeyPress($event)" name="category-name">
+    <input mdInput [(ngModel)]="name" placeholder="New Category Name" (keypress)="onKeyPress($event)" class="new-category-name">
   </md-input-container>
 
   <md-icon class="add-new-category" (click)="addCategory()">add_box</md-icon>
