got the delete test to work

--- a/src/app/pages/budget-list-page/budget-list-page.component.html
+++ b/src/app/pages/budget-list-page/budget-list-page.component.html
@@ -4,7 +4,8 @@
 
 <div class="budget" *ngFor="let budget of budgets$ | async">
   <span>{{budget.name}}</span>
-  <button class="open" (click)="openBudget(budget.id)">Open</button>
+  <button class="open" ngClass="open-button-for-{{budget.name}}" 
+  (click)="openBudget(budget.id)">Open</button>
   <button class="delete-button" (click)="deleteBudget(budget.id)">Delete</button>
   <button id="export-budget" (click)="exportBudget(budget.id)">Export Budget</button>  
   <button class="make-default">Make Default</button>
