add headings to the bar graphs

--- a/src/app/components/bar-graph/bar-graph.component.css
+++ b/src/app/components/bar-graph/bar-graph.component.css
@@ -1,6 +1,6 @@
-/*.legend {
-  font-size: 10px;
+div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #EEE;
 }
-rect {
-  stroke-width: 2;
-}*/
