--- a/src/app/pages/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page-right-nav/budgeting-page-right-nav.component.html
@@ -1,7 +1,11 @@
 <!--<yb-pie [update]="renderPie" title="Yearly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>
 <yb-pie [update]="renderPie2" title="Monthly" [width]="240" [height]="240" ringWidth="50" legendRectSize="18" legendSpacing="4"></yb-pie>-->
 
+<h2>Yearly</h2>
 <yb-bar-graph [update]="renderPie" [width]="200" [height]="300" [barPadding]="10" [maxRectSize]="120" title="Yearly"></yb-bar-graph>
 
+<hr>
+
+<h2>Monthly</h2>
 <yb-bar-graph [update]="renderPie2" [width]="200" [height]="300" [barPadding]="10" [maxRectSize]="120" title="Monthly"></yb-bar-graph>
 
